[project]
name = "kb25pkuser4"
version = "0.1.0"
description = ""
authors = [
    {name = "rlaqhdud4308",email = "rlaqhdud4308@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

